# upgraded-carnival

./: .gitignore  README.md  dev.db  index.html  package-lock.json  package.json
prisma/: schema.prisma
prisma/migrations/20260427170348_init/: migration.sql
src/: App.tsx  index.css
src/app/: globals.css  layout.tsx
src/app/api/llm/: route.ts
src/app/api/members/: route.ts
src/app/api/prompt-history/: route.ts
src/app/api/tasks/: route.ts
src/app/command/: DatabasePanel.tsx  LLMPanel.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/heatmap/: HeatmapClient.tsx  MapComponent.tsx  page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/backend/: pyproject.toml  requirements.txt
src/backend/app/: config.py  main.py
src/backend/app/db/: supabase_client.py
src/backend/app/models/: schemas.py
src/backend/app/routes/: tickets.py  volunteers.py
src/backend/app/services/: fusion_engine.py  llm_engine.py  rule_engine.py
src/backend/app/utils/: ticket_id.py
src/components/: Navigation.tsx
src/frontend/: package-lock.json  package.json  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: Footer.tsx  MapLayer.tsx  TicketList.tsx
src/frontend/src/layouts/: DashboardLayout.tsx
src/frontend/src/lib/: supabase.ts
src/frontend/src/pages/: Dashboard.tsx  Database.tsx  Heatmap.tsx  Login.tsx  Triage.tsx
src/layouts/: DashboardLayout.tsx
src/lib/: auth.ts  prisma.ts
src/pages/: Dashboard.tsx  Database.tsx  Heatmap.tsx  Login.tsx
src/store/: useAuthStore.ts
src/types/: index.ts
(+5 files in other folders)
